--- a/avance2-proyecto.tex
+++ b/avance2-proyecto.tex
@@ -353,7 +353,7 @@ En el rango de 5 a 30 se concentra la siguiente porción más significativa de l
 
 \renewcommand{\arraystretch}{1.3}
 \begin{scriptsize}% latex table generated in R 4.4.2 by xtable 1.8-4 package
-% Fri May 16 06:57:52 2025
+% Fri May 16 07:06:57 2025
 \begin{longtable}{lrrrrrrrrrrr}
 \caption{Tabla de Frecuencia Bivariada Región vs Índice Commerce} \\ 
   \hline
@@ -463,7 +463,7 @@ En contraste, a medida que aumentan los valores tanto del Índice Research como 
 
 \renewcommand{\arraystretch}{1.3}
 \begin{scriptsize}% latex table generated in R 4.4.2 by xtable 1.8-4 package
-% Fri May 16 06:57:52 2025
+% Fri May 16 07:06:58 2025
 \begin{longtable}{lrrrrrrrrrrr}
 \caption{Tabla de Frecuencia Bivariada Índice Research (A) vs Total Score (B)} \\ 
   \hline
@@ -560,7 +560,7 @@ Intervalo & F.Absoluta & F.Relativa & F.Abs.Acum & F.Rel.Acum \\
 
 \renewcommand{\arraystretch}{1.3}
 \begin{scriptsize}% latex table generated in R 4.4.2 by xtable 1.8-4 package
-% Fri May 16 06:57:53 2025
+% Fri May 16 07:06:58 2025
 \begin{longtable}{lrrrrrrrrrrr}
 \caption{Tabla de Frecuencia Bivariada Índice Talent (A) vs Total Score (B)} \\ 
   \hline
@@ -952,6 +952,15 @@ Finalmente, el estudio confirma que el éxito en inteligencia artificial no depe
 [1]   “AI Global Index,” Kaggle, Apr. 26, 2023.         https://www.kaggle.com/datasets/katerynameleshenko/ai-index
 
 [2]   W. Navidi, Statistics for Engineers and Scientists w/ CD-ROM. McGraw-Hill Sci./Eng./Math, 2004.
+
+[3] Academia Lab, "Teorema del límite central," Enciclopedia, 2025. [Online]. Available: https://academia-lab.com/enciclopedia/teorema-del-limite-central/. [Accessed: May 16, 2025].
+
+[4] Minitab, "¿Qué es un valor crítico?," Minitab Support, 2025. [Online]. Available: https://support.minitab.com/es-mx/minitab/help-and-how-to/statistics/basic-statistics/supporting-topics/basics/what-is-a-critical-value/. [Accessed: May 16, 2025].
+
+[5] Universidad de los Andes, "Regresión lineal: qué es y cómo funciona," Programas Uniandes, 2025. [Online]. Available: https://programas.uniandes.edu.co/blog/regresion-lineal. [Accessed: May 16, 2025].
+
+[6] D. Diez, M. Çetinkaya-Rundel, and C. Barr, OpenIntro Statistics: Fourth Edition. OpenIntro, Inc., 2019.
+
 
 \end{multicols}
 
